--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pre-homeworks",
   "version": "0.1.0",
+  "homepage": "https://github.com/guzlunger/incubatorHomework",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
